--- a/src/constructPseudotemporalOrdering.Rmd
+++ b/src/constructPseudotemporalOrdering.Rmd
@@ -18,7 +18,8 @@ require(Seurat)
 require(ComplexHeatmap)
 require(factoextra)
 require(ggfortify)
-require(bnlearn)
+require(xlsx)
+#require(bnlearn)
 require(UsingR)
 ```
 
@@ -30,18 +31,21 @@ Choose from cell types:
   - Microglia: "Mic"
   - Oligodendrocytes: "Oli"
   - Oligodendrocyte Progenitor Cells: "OPC"
+  
+Use HD Microglia:
+  - "HD_mic"
 ```{r "Load Data"}
 # Select cell type from list
-cell.type = "Mic"
-sce.file.name <- paste("/home/samsl/Pseudotemporal-GRNs/data/",cell.type,"/",cell.type,"_sce.rds",sep="")
-ACTIONet.file.name <- paste("/home/samsl/Pseudotemporal-GRNs/data/",cell.type,"/",cell.type,"_ACTIONet.rds",sep="")
+cell.type = "HD_mic"
+sce.file.name <- paste("/home/samsl/Pseudotemporal-GRNs/raw-data/",cell.type,"/",cell.type,"_sce.rds",sep="")
+ACTIONet.file.name <- paste("/home/samsl/Pseudotemporal-GRNs/raw-data/",cell.type,"/",cell.type,"_ACTIONet.rds",sep="")
 sce <- readRDS(sce.file.name)
 ACTIONet.out <- readRDS(ACTIONet.file.name)
 ```
 
 # Identify Cell States Correlated with Disease
 To produce a pseudotemporal ordering of cell states, we identify cell states which are correlated with disease. We can use `braaksc`, `ceradsc`, or `cogdx` as clinical indicators of disease progression. For now, we will use `ceradsc`. We plot enrichment for clinical phenotype across cell states to identify the maximally enriched cell state.
-```{r "Find Cluster Markers"}
+```{r "Alz Find Cluster Markers"}
 # Import Clinical Data from ROSMAP
 clinical <- read.table("/home/samsl/Pseudotemporal-GRNs/data/Processed_10x_AD_data/ROSMAP_Clinical_2019-05_v3.csv", header = TRUE, sep=",")
 
@@ -60,8 +64,27 @@ ACTIONet.out <- add.cell.annotations(ACTIONet.out, indicators[[selected.ind]], a
 plot.ACTIONet(ACTIONet.out, labels = ACTIONet.out$annotations[[selected.ind]]$Labels)
 
 # Identify disease progression enriched archetypes
-annot.out <- annotate.archetypes.using.labels(ACTIONet.out, sce$grade, core = TRUE)
 annot.out <- annotate.archetypes.using.labels(ACTIONet.out, indicators[[selected.ind]], core = TRUE)
+png(paste("img/",cell.type,"_cell_state_",selected.ind,"_enrichment.png",sep=""))
+Heatmap(t(annot.out$Enrichment), cluster_rows = FALSE, cluster_columns = FALSE, name='Enrichment', column_title='Cell State', column_title_side='bottom')
+```
+
+```{r "HD Find Cluster Markers"}
+# Import Clinical Data from ROSMAP
+clinical <- read.xlsx("/home/samsl/Pseudotemporal-GRNs/raw-data/Processed_HD_data/Human_HD_metedata.xlsx", 1, header=TRUE)
+clinical$Grade <- as.factor(as.numeric(clinical$Grade))
+clinical <- clinical[1:12,]
+
+grade.ind <- factor(unlist(lapply(colData(sce)$batch, function (x) { clinical[which(clinical$Batch.Order == x),"Grade"] })))
+
+# Annotate ACTIONet with each clinical indicator
+ACTIONet.out <- add.cell.annotations(ACTIONet.out, sce$grade, annotation.name="grade")
+
+# Visualize  the clinical indicators in the ACTIONet layout
+plot.ACTIONet(ACTIONet.out, labels = ACTIONet.out$annotations[["grade"]]$Labels)
+
+# Identify disease progression enriched archetypes
+annot.out <- annotate.archetypes.using.labels(ACTIONet.out, grade.ind, core = TRUE)
 png(paste("img/",cell.type,"_cell_state_",selected.ind,"_enrichment.png",sep=""))
 Heatmap(t(annot.out$Enrichment), cluster_rows = FALSE, cluster_columns = FALSE, name='Enrichment', column_title='Cell State', column_title_side='bottom')
 ```
@@ -76,9 +99,9 @@ png(paste0("img/",cell.type,"_cell_state_disease_enrichment.png"))
 Heatmap(t(enrichment.out), cluster_columns=FALSE, name='Enrichment', column_title = 'Cell State', column_title_side = 'bottom')
 ```
 
-# Calculate Disease Score
+# Calculate Disease Score (Alz)
 This cell state can then be used to assign scores for each cell.
-```{r "Disease Score"}
+```{r "Alz Disease Score"}
 # Indicators vote for most correlated state
 MAX.BRAAK.STAGE <- 6
 braak.ind.enrich <- annotate.archetypes.using.labels(ACTIONet.out, indicators[["braak"]], core = TRUE)$Enrichment
@@ -106,6 +129,37 @@ listMode <- function(v) {
 }
 
 correlated.state <- listMode(c(braak.vote, cerad.vote, cogdx.vote, disease.vote, active.mic.vote))
+
+disease.score <- ACTIONet.out$unification.out$H.core[correlated.state,]
+core.significance <- ACTIONet.out$unification.out$DE.core@assays[["significance"]]
+associated.genes <- rownames(core.significance)[order(core.significance[,correlated.state], decreasing=TRUE)]
+png(paste("img/",cell.type,"_archetype_disease_score_gradient.png",sep=""))
+plot.ACTIONet.gradient(ACTIONet.out,disease.score)
+```
+
+# Calculate Disease Score (HD)
+This cell state can then be used to assign scores for each cell.
+```{r "HD Disease Score"}
+# Indicators vote for most correlated state
+MAX.GRADE <- 4
+grade.enrich <- annotate.archetypes.using.labels(ACTIONet.out, grade.ind, core = TRUE)$Enrichment
+grade.vote <- which.max(grade.enrich[,MAX.GRADE])
+
+DISEASE.ENRICH.COL <- 1
+disease.enrich <- t(geneset.enrichment.archetype(ACTIONet.out, ADmarkers))
+disease.vote <- which.max(disease.enrich[,DISEASE.ENRICH.COL])
+
+ACTIVE.MIC.COL <- 2
+active.mic.vote <-  which.max(disease.enrich[,ACTIVE.MIC.COL])
+
+
+listMode <- function(v) {
+   uniqv <- unique(v)
+   uniqv[which.max(tabulate(match(v, uniqv)))]
+}
+
+correlated.state <- listMode(c(grade.vote, disease.vote, active.mic.vote))
+correlated.state <- grade.vote
 
 disease.score <- ACTIONet.out$unification.out$H.core[correlated.state,]
 core.significance <- ACTIONet.out$unification.out$DE.core@assays[["significance"]]
@@ -177,8 +231,8 @@ clusts <- as.data.frame(list("CellNames" = colnames(sce),
                              "ArchetypeCluster" = ACTIONet.out$unification.out$assignments.core
                              ))
 
-saveRDS(df,paste0("data/",cell.type,"/top_gene_counts.rds"))
-saveRDS(clusts,paste0("data/",cell.type,"/clusters.rds"))
+saveRDS(df,paste0("processed-data/",cell.type,"/top_gene_counts.rds"))
+saveRDS(clusts,paste0("processed-data/",cell.type,"/clusters.rds"))
 ```
 
 # Monocle
